# LinuxMediaLibrary-Framework

./: LAnimation  LCharacter  LFile  LMixer  LOutput  LPreview  LRecorder  LStream  LSwitcher  README.md
Example/Animation/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/Animation/template/: lowerthird.json  scoreboard.json
Example/LiveDevice/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Example/Mixer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/Output/: CMakeLists.txt  main.cpp  mainwindow.h
Example/Playout/: CMakeLists.txt  graphicsedit.cpp  graphicsedit.h  graphicsedit.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  rowcolordelegate.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Example/PreviewGTK/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Example/Recorder/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/Switcher/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
